[package]
name = "top-logs"
version = "1.4.0"
authors = ["Daniel Mikusa <dmikusa@vmware.com>"]
edition = "2018"
description = "Tops logs is a tool which can be used to parse through access logs to understand usage trends and hunt for problems"
repository = "https://github.com/dmikusa-pivotal/top-logs"
readme = "README.md"
license = "Apache-2.0"
keywords = ["access", "logs", "parse"]
categories = ["parsing", "parser-implementations"]

[dependencies]
access_log_parser = "0.7"
chrono = "0.4"
http = "0.2"
defaultmap = "0.5"
prettytable-rs = "0.8"
anyhow = "*"

[dependencies.clap]
version = "3.0"
default-features = false
features = ["std", "cargo"]
