[package]
name = "top-logs"
version = "1.62.0"
authors = ["Daniel Mikusa <dmikusa@vmware.com>"]
edition = "2018"
description = "Tops logs is a tool which can be used to parse through access logs to understand usage trends and hunt for problems"
repository = "https://github.com/dmikusa-pivotal/top-logs"
readme = "README.md"
license = "Apache-2.0"
keywords = ["access", "logs", "parse"]
categories = ["parsing", "parser-implementations"]

[dependencies]
access_log_parser = "0.9"
http = "1"
defaultmap = "0.6"
prettytable-rs = "0.10"
anyhow = "1.0"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock"]

[dependencies.clap]
version = "4.5"
default-features = false
features = ["std", "cargo", "help", "usage", "error-context", "wrap_help"]
